BG-143: Bump spring/proto (#46)